bases/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hcp-api-gateway
  namespace: hcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hcp-api-gateway
  template:
    metadata:
      labels:
        app: hcp-api-gateway
    spec:
      containers:
        - name: hcp-api-gateway
          image: rudals4549/hcp-api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
