bases/api-gateway/active-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcp-api-gateway-svc
  namespace: hcp
  labels:
    app: hcp-api-gateway
spec:
  selector:
    app: hcp-api-gateway
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
