bases/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hcp-gateway-ingress
  namespace: hcp
spec:
  ingressClassName: nginx
  rules:
    - host: hcp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hcp-api-gateway-svc
                port:
                  number: 80
